Fixes issues with colours after changes in PR #1143 - Certain input fields where not visible

--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -4,6 +4,7 @@
 $primary-text-color,
 $bg-color,
 $dark-text-color,
+$inactive-text-color,
 $link-text-color,
 $light-text-color,
 $secondary-text-color,
@@ -669,7 +670,7 @@ $pulsate-red-end
             }
             .selector {
                 .inactive {
-                    color: $dark-text-color;
+                    color: $inactive-text-color;
                 }
             }
         }
@@ -1345,10 +1346,10 @@ $pulsate-red-end
 
     select.bts-select, select.native-coin-types, select.external-coin-types {
         color: $secondary-text-color;
-        background-color: $input-background;
+        background-color: $light-panel-bg-color;
         border: 0;
         &:hover, &:focus, &:active {
-            background-color: $input-background;
+            background-color: $light-panel-bg-color;
         }
     }
 
